src/objects/Site_Lead__c.object
<CustomObject>
    <description>Object to capture Leads for Dementia Friends Initiative. Used on Sites.</description>
    <fields>
        <fullName>Consent_To_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Consent To Contact</description>
        <label>Consent To Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email address</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email_address__c</fullName>
        <label>Email address</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Site Lead</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Site_Leads_by_Date</fullName>
        <columns>NAME</columns>
        <columns>LastName__c</columns>
        <columns>FirstName__c</columns>
        <columns>Email__c</columns>
        <columns>Email_address__c</columns>
        <columns>Consent_To_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Site Leads by Date</label>
    </listViews>
    <nameField>
        <label>Site Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>